Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-May-2010 Jean-Marie Simonet
^ Hathor's views (20384]

09-May-2010 Ron Severdia
# BlueStork UI fixes
# CSS cleanup
# Language fixes
+ New icons

09-May-2010 Christophe Demko
 + Add language filter on some hathor views

09-May-2010 Hannes Papenberg
# Some fixes to beez 2.0 - Thanks Angie Radtke

09-May-2010 Christophe Demko
 ^ Adding login position in administrator templates
 ^ Fix #17020

09-May-2010 Jean-Marie Simonet
$ Changed Keys for com_search [20373] + some
# Fixed template files edit/save
$ Correcting some strings
$ Consolidated some strings
$ Refactored offline.php ini/strings

08-May-2010 Christophe Demko
 #^ Allowing languages to use specified lower/upper limit and length of displayed result for text search (http://groups.google.fr/group/joomla-dev-cms/browse_thread/thread/3b0ecd3ba64e973e)
 # Correcting a bug for unique menu item alias

08-May-2010 Jean-Marie Simonet
# Correcting 16193 (Thanks Elin)

08-May-2010 Sam Moffatt
 ^ [#20348] Patch for renumbering of core extensions in extensions table (Thanks Elin!)
 ^ Updated jos_schemas table to fix field names
 + Added extension plugin to ensure update sites are maintained
 ^ Altered SQL handling for component/module/plugin update handling

08-May-2010 Jean-Marie Simonet
$ Consolidated some strings
# Corrected double translation in jgrid

07-May-2010 Ian MacLennan
# Fixed error in JString::strspn that caused unit tests to fail on systems without mbstring

07-May-2010 Jean-Marie Simonet
$ Consolidated some strings
# Fixing installation issue _ Thank you Dennis Hermatski
$ Deleting unused strings in main ini file
$ Changed toolbar to "Delete" in com_users
# Fixed [20365] Config modal error display. Thank you Artyom.